--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <section class="main">
     <div>
-      <h2>Hello i'm Osama <br><span>just player</span></h2>
+      <h2>Hello i'm Osama <br><span>Programmer</span></h2>
       <h3> first design</h3>
       <a href="#projects" class="main-btn">View My Work</a>
       <div>
