--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <p class="project-category"> email project</p>
           <strong class="project-title">
             <span>Email Page</span>
-            <a href="https://osama9711.github.io/osama2812/" class="more-details"> more details</a>
+            <a href="https://osama9711.github.io/email-web-page/" class="more-details"> more details</a>
           </strong>
         </div>
       </div>
