--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section class="main">
     <div>
       <h2>Hello i'm Osama <br><span>Programmer</span></h2>
-      <h3> first design</h3>
+      <h3>this is my first design</h3>
       <a href="#projects" class="main-btn">View My Work</a>
       <div>
 
