--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <p class="project-category"> email project</p>
           <strong class="project-title">
             <span>Email Page</span>
-            <a href="https://osama9711.github.io/email-web-page" class="more-details"> more details</a>
+            <a href="https://osama9711.github.io/osama2812/" class="more-details"> more details</a>
           </strong>
         </div>
       </div>
@@ -200,6 +200,44 @@
           <h3>email</h3 <p>programmer2812@gmail.com </p>
         </div>
   </section>
+
+  <div class="main">
+    <!-- <div><label id="search_label" for="search"> </label>
+    <input id="search" type="search" placeholder="search" autofocus></div>
+    <br> -->
+    <br>
+    <form action="" method="post" value="_blank">
+
+      <div class="username"><label for="user">uesrname
+        </label>
+        <input id="user" type="text" placeholder=" input the user name" required>
+      </div>
+
+      <div class="password"> <label for="password">password</label>
+        <input id="password" type="password" placeholder=" input a strong password" maxlength="20" minlength="8">
+      </div>
+
+      <div class="email"> <label for="Email">Email</label>
+        <input id="Email" type="email" placeholder=" input a valied email" required>
+      </div>
+
+      <div class="date"> <label for="date">date</label>
+        <input id="date" type="date">
+      </div>
+
+      <div class="time"><label for="time">time</label>
+        <input id="time" type="time">
+      </div>
+
+      <div class="submet"><label for="submet">submet</label>
+        <input id="submet" type="submit">
+      </div>
+      <div class="reset"><label for="reset">reset</label>
+        <input id="reset" type="reset">
+      </div>
+    </form>
+  </div>
+
   <footer class="footer">
     <p class="footer-title">Copyrights@<span>Osama</span></p>
     <div class="social-icons">
