--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <section class=" hh contact cards " id="contact me">
 
-    <div class="card">
+    <div class="card" id="card-pointer">
       < <div class="icon">
         <i class="fa-solid fa-computer-classic"></i>
 
@@ -193,7 +193,7 @@
     </div>
     </div>
 
-    <div class="card">
+    <div class="card" id="card-pointer">
       < <div class="icon">
         <i class="fa-solid fa-computer-classic"></i>
         <div class="info">
@@ -241,10 +241,10 @@
   <footer class="footer">
     <p class="footer-title">Copyrights@<span>Osama</span></p>
     <div class="social-icons">
-      <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-      <a href="https://www.facebook.com/Osama711/"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://youtu.be/vlf7Yws5JEM"><i class="fa-brands fa-youtube-square"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-brands fa-linkedin-in" target="_blank"></i></a>
+      <a href="https://www.facebook.com/Osama711/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://youtu.be/vlf7Yws5JEM" target="_blank"><i class="fa-brands fa-youtube-square"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram" target="_blank"></i></a>
     </div>
   </footer>
 </body>
